# yet-another-flight-scanner

./: .gitignore  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
runs/: run.sh
yafs/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  whitelist.txt
yafs/notebooks/: analysis.ipynb  drafts.ipynb
yafs/scripts/: configure.sh
yafs/yafs/: drafts.ipynb  flights.py  main.py  utils.py
yafs/yafs/notebooks/: drafts.ipynb
yafs/yafs/tests/: test_end_to_end.py
