[tool.poetry]
name = "yafs"
version = "0.1.0"
description = "Yet Another Flight Scanner"
authors = ["Mateusz Krainski <mateusz@krainski.eu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.2.2"


[tool.poetry.group.dev.dependencies]
darglint = "^1.8.1"
flake8 = "^7.1.0"
flake8-bandit = "^4.1.1"
flake8-bugbear = "^24.4.26"
flake8-builtins = "^2.5.0"
flake8-comprehensions = "^3.15.0"
flake8-docstrings = "^1.7.0"
flake8-eradicate = "^1.5.0"
flake8-isort = "^6.1.1"
flake8-spellcheck = "^0.28.0"
pep8-naming = "^0.14.1"
flake8-pyproject = "^1.2.3"
black = "^24.4.2"
flake8-black = "^0.3.6"
isort = "^5.13.2"
django-extensions = "^3.2.3"
coverage = "^7.5.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 88
dictionaries = ["en_US", "python", "technical"]
ignore = ["D104", "D100", "D101", "D106"]
per-file-ignores = """
"""

[tool.isort]
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
profile = "black"
known_first_party = ["yafs"]

[tool.poe]
envfile = ".env"

[tool.poe.tasks]
configure = "./scripts/configure.sh"
lint = "flake8 yafs scripts"
test = 'coverage run -m pytest --showlocals'

[tool.poe.tasks.test-full]
sequence = [
  { ref = "test" }
]